--- a/package.json
+++ b/package.json
@@ -8,11 +8,18 @@
     "start": "next start"
   },
   "dependencies": {
+    "@emotion/react": "^11.10.4",
+    "@emotion/styled": "^11.10.4",
     "@heroicons/react": "^1.0.6",
+    "@mui/material": "^5.10.7",
+    "firebase": "^9.9.1",
     "next": "latest",
     "react": "18.1.0",
     "react-dom": "18.1.0",
+    "react-hook-form": "^7.36.1",
     "react-icons": "^4.4.0",
+    "react-player": "^2.11.0",
+    "recoil": "^0.7.5",
     "tailwind-scrollbar-hide": "^1.1.7"
   },
   "devDependencies": {
